force-app/main/default/objects/Subscription__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Customer</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipName>Subscriptions</relationshipName>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>