force-app/main/default/objects/Subscription__c/fields/Cadence__c.field-meta.xml
<CustomField>
    <fullName>Cadence__c</fullName>
    <label>Delivery Cadence</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Weekly</fullName><default>false</default><label>Weekly</label></value>
            <value><fullName>Biweekly</fullName><default>false</default><label>Biweekly</label></value>
            <value><fullName>Monthly</fullName><default>true</default><label>Monthly</label></value>
            <value><fullName>Quarterly</fullName><default>false</default><label>Quarterly</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>