force-app/main/default/objects/Subscription__c/fields/MonthlyPrice__c.field-meta.xml
<CustomField>
    <fullName>MonthlyPrice__c</fullName>
    <label>Monthly Price (EUR)</label>
    <type>Currency</type>
    <precision>10</precision>
    <scale>2</scale>
</CustomField>