force-app/main/default/objects/Subscription__c/fields/NextDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>NextDeliveryDate__c</fullName>
    <label>Next Delivery Date</label>
    <type>Date</type>
</CustomField>