force-app/main/default/objects/Subscription__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Coffee Product</label>
    <type>Lookup</type>
    <referenceTo>CoffeeProduct__c</referenceTo>
    <relationshipName>Subscriptions</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>